<resources>
    <string name="app_name">Clubcervecero2</string>
    <string name="app_user">User name</string>
    <string name="app_pass">Password</string>
    <string name="app_login">Log in</string>
    <string name="app_logup1">not have an account?</string>
    <string name="app_logup2">Create here</string>
    <string name="app_logup_correo">E-Mail</string>
    <string name="app_logup_nombre">Name</string>
    <string name="app_logup_confirmarcontrasenia">Confirm password</string>
    <string name="app_logup_crearcuenta">Confirm account</string>
    <string name="app_toolbar_title_createacount">Create account</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textdetail_lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est.</string>

    <string name="usuarioFotoPerfil"></string>
    <string name="title_activity_maps">Map</string>

</resources>
