<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/logo1"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorTextWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Correo"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/textInputLogin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorTextWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputContrseniaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusDown="@id/buttonIniciarSesion"
                android:singleLine="true"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/textInputLogin" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:height="60dp"
            android:text="@string/app_login"
            android:textSize="@dimen/TextButtonLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/app_logup1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCreateAccount"
                android:text="@string/app_logup2"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>